--- a/css/style1.css
+++ b/css/style1.css
@@ -85,7 +85,7 @@
     display: inline-block;
   }
   .tcb-product-info {
-    background: #f0f0f0;
+    background: #ffffff;
     padding: 15px;
     height: 200px;
   }
