--- a/css/style1.css
+++ b/css/style1.css
@@ -58,6 +58,7 @@
   }
   .tcb-product-slider .carousel-control {
     width: 5%;
+      height: 85%;
   }
   .tcb-product-item a {
     color: #fb8264;
